# max_app

./: .gitignore  Cargo.toml  Config.yaml  README.md  github-key-max-app  github-key-max-app.pub
migrations/: 20260212013406_create_works_table.sql
src/: Config.toml  lib.rs  main.rs  state.rs
src/api/: routes.rs
src/api/handlers/: max_webhook.rs  mod.rs  search.rs  works.rs
src/config/: mod.rs
src/core/: mod.rs  models.rs
src/core/models/: mod.rs  user.rs  work.rs
src/core/repositories/: mod.rs  work_repo.rs
src/core/services/: mod.rs  work_service.rs
src/error/: mod.rs
src/infrastructure/: database.rs  mod.rs
src/integrations/: mod.rs
src/integrations/max/: api_client.rs  mod.rs
