[package]
name = "max_app"
version = "0.1.0"
edition = "2021"
authors = ["greysoft <greysoftcrazy@gmail.com>"]
description = "Цифровой архив работ ГПОУ ЮТК с интеграцией платформы МАКС"
license = "MIT"
repository = "https://github.com/greysoftcrazy/max_app"

[dependencies]
# Веб-фреймворк
axum = "0.7"
tokio = { version = "1.0", features = ["full", "net"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-full"] }
thiserror = "1.0"
dotenv = "0.15"
# База данных
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "migrate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Аутентификация
jsonwebtoken = "9.0"
argon2 = "0.5"
rand = "0.8"

# Валидация
validator = { version = "0.16", features = ["derive"] }

# Хранение файлов
tokio-util = { version = "0.7", features = ["io"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP клиент для интеграции с внешними сервисами
reqwest = { version = "0.11", features = ["json"] }

# Логирование
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"

# Конфигурация
figment = { version = "0.10", features = ["yaml", "env"] }

# Обработка файлов (превью)
image = "0.24"

# Сериализация/десериализация для конфигов
serde_yaml = "0.9"

[dev-dependencies]
# Для тестирования
tokio = { version = "1.0", features = ["macros", "test-util"] }